--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پرواز به گرافیک</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -14,8 +14,8 @@
             <ul class="nav-links">
                 <li><a href="#">خانه</a></li>
                 <li><a href="#">درباره ما</a></li>
-                <li><a href="#">خرید اموزش</a></li>
-                <li><a href="#">تماس با ما</a></li>
+                <li><a href="#">رید اموزش</a></li>
+                <li><a href="#">تماس ا ما</a></li>
             </ul>
             <a href="#" class="btn">شروع کنید</a>
         </nav>
